fix: add var to slider items, fix min-width counter and gaps between

--- a/styles/blocks/member.css
+++ b/styles/blocks/member.css
@@ -17,6 +17,7 @@
     display: inline-flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     gap: 17px;
 }
 
@@ -36,6 +37,7 @@
 }
 
 .members__slider-list {
+    grid-template-columns: repeat(4, 100%);
     margin-block: 40px;
 }
 
